fix: skip cleanup test in main integration test run
The cleanup test runs separately:
- Before tests (pre-test cleanup)
- After tests (post-test cleanup job)
- On failure (cleanup on failure)

No need to run it as part of the main test suite.

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -521,7 +521,7 @@ jobs:
       - name: Run Terratest Integration Tests
         working-directory: terraform-tests/integration
         run: |
-          go test -v -timeout 30m -parallel 1
+          go test -v -timeout 30m -parallel 1 -skip TestCleanupAllOrphanedResources
         env:
           TF_VAR_environment: ci-test
           TF_VAR_project_name: sp-autopilot-ci
