chore: update SonarCloud config for new test directories
Add lambda/shared/tests and lambda/tests to SonarCloud configuration:
- Include in test paths to exclude from main analysis
- Add to coverage exclusions
- Add to duplicate detection exclusions

This ensures our new test suites (unit tests for sp_calculations and
cross-platform parity tests) are properly recognized as test code by
SonarCloud.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.links.scm=https://github.com/etiennechabert/terraform-aws-sp-autopilot
 sonar.sources=.
 
 # Test paths (excluded from analysis)
-sonar.tests=lambda/scheduler/tests,lambda/purchaser/tests,lambda/reporter/tests
+sonar.tests=lambda/scheduler/tests,lambda/purchaser/tests,lambda/reporter/tests,lambda/shared/tests,lambda/tests
 sonar.test.inclusions=**/*test*.py
 
 # Language-specific configurations
@@ -58,13 +58,17 @@ sonar.coverage.exclusions=\
   lambda/scheduler/tests/**,\
   lambda/purchaser/tests/**,\
   lambda/reporter/tests/**,\
+  lambda/shared/tests/**,\
+  lambda/tests/**,\
   lambda/local_runner.py
 
 # Duplicate detection
 sonar.cpd.exclusions=\
   **/tests/**,\
   **/test_*.py,\
-  lambda/reporter/html_report.py
+  lambda/reporter/html_report.py,\
+  lambda/shared/tests/**,\
+  lambda/tests/**
 
 # Issue exclusions (align with existing tools)
 # Ruff handles Python linting, tfsec handles Terraform security
