fix: include shared module in reporter test coverage
Add shared module to pytest configuration so its tests are discovered
and coverage is measured. This ensures SonarCloud receives coverage
data for the new sp_calculations module.

- Added ../shared/tests to testpaths
- Added --cov=shared to measure shared module coverage

--- a/lambda/reporter/pytest.ini
+++ b/lambda/reporter/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = tests
+testpaths = tests ../shared/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
@@ -10,6 +10,7 @@ addopts =
     --cov=notifications
     --cov=scheduler_preview
     --cov=config
+    --cov=shared
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
