fix: measure coverage only for sp_calculations in shared module
Instead of measuring coverage for the entire shared module (which includes
many files not exercised by reporter tests), only measure coverage for
sp_calculations.py which is fully tested and used by the reporter.

This avoids pulling down the total coverage percentage while still
ensuring SonarCloud receives coverage data for the new module.

--- a/lambda/reporter/pytest.ini
+++ b/lambda/reporter/pytest.ini
@@ -10,7 +10,7 @@ addopts =
     --cov=notifications
     --cov=scheduler_preview
     --cov=config
-    --cov=shared
+    --cov=shared.sp_calculations
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
