fix: exclude frontend files from SonarCloud coverage gate
Frontend JS/CSS are tested via Playwright integration tests, not unit
tests with coverage instrumentation. Add docs/js/** and docs/css/**
to sonar.coverage.exclusions so the quality gate doesn't fail on 0%
coverage for these files.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -47,7 +47,8 @@ sonar.exclusions=\
   **/.git/**,\
   **/.DS_Store
 
-# Test files exclusion from coverage
+# Test files and frontend exclusion from coverage
+# Frontend JS/CSS are tested via Playwright integration tests (no unit coverage)
 sonar.coverage.exclusions=\
   **/tests/**,\
   **/test_*.py,\
@@ -57,7 +58,9 @@ sonar.coverage.exclusions=\
   lambda/reporter/tests/**,\
   lambda/shared/tests/**,\
   lambda/tests/**,\
-  lambda/local_runner.py
+  lambda/local_runner.py,\
+  docs/js/**,\
+  docs/css/**
 
 # Duplicate detection
 sonar.cpd.exclusions=\
