fix: update Playwright tests for button UI, cap commitment slider, SonarCloud config
- Rewrite pattern-selection tests to use button clicks instead of removed select dropdown
- Cap commitment slider max at coverage for 100% of max-hourly cost
- Add SonarCloud exclusion for Math.random() in frontend pattern generators

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -60,7 +60,8 @@ sonar.coverage.exclusions=\
   lambda/tests/**,\
   lambda/local_runner.py,\
   docs/js/**,\
-  docs/css/**
+  docs/css/**,\
+  terraform-tests/integration/**
 
 # Duplicate detection
 sonar.cpd.exclusions=\
@@ -73,7 +74,7 @@ sonar.cpd.exclusions=\
 # Ruff handles Python linting, tfsec handles Terraform security
 # SonarCloud focuses on code quality, bugs, and security
 # Coverage enforcement is handled by codecov
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6
 
 # E1: Allow TODO/FIXME comments (managed by team)
 sonar.issue.ignore.multicriteria.e1.ruleKey=python:S1135
@@ -94,6 +95,10 @@ sonar.issue.ignore.multicriteria.e4.resourceKey=**/*.tf
 # E5: IAM wildcard resources (required for AWS Savings Plans API)
 sonar.issue.ignore.multicriteria.e5.ruleKey=terraform:S6302
 sonar.issue.ignore.multicriteria.e5.resourceKey=iam.tf
+
+# E6: Math.random() in frontend pattern generators (visual, not cryptographic)
+sonar.issue.ignore.multicriteria.e6.ruleKey=javascript:S2245
+sonar.issue.ignore.multicriteria.e6.resourceKey=docs/js/**
 
 # New Code Definition
 sonar.newCodePeriod.type=previous_version
