fix: use min-hourly based coverage calculations with on-demand equivalents
Coverage percentages in scheduler preview were based on avg_coverage_total
which didn't accurately reflect the min-hourly baseline. Refactored to
compute coverage as percentage of min-hourly using sp_calculations for
on-demand equivalent conversions, consistent across reporter and preview.

Also simplified pytest coverage config across all lambdas.

--- a/lambda/reporter/pytest.ini
+++ b/lambda/reporter/pytest.ini
@@ -5,13 +5,8 @@ python_classes = Test*
 python_functions = test_*
 addopts =
     -v
-    --cov=handler
-    --cov=report_generator
-    --cov=notifications
-    --cov=scheduler_preview
-    --cov=config
-    --cov=shared.sp_calculations
+    --cov=.
+    --cov=../shared
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
-    --cov-fail-under=75
