--- a/lambda/purchaser/pytest.ini
+++ b/lambda/purchaser/pytest.ini
@@ -6,7 +6,7 @@ python_functions = test_*
 addopts =
     -v
     --cov=.
+    --cov=../shared
     --cov-report=term-missing
     --cov-report=html
     --cov-report=xml
-    --cov-fail-under=75
