chore: add docs/test-results/ to .gitignore
Playwright test results generated outside docs/tests/ were not ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -265,5 +265,6 @@ local_data/
 docs/tests/node_modules/
 docs/tests/playwright-report/
 docs/tests/test-results/
+docs/test-results/
 docs/tests/.playwright/
 docs/tests/playwright/.cache/
