--- a/.gitignore
+++ b/.gitignore
@@ -239,7 +239,7 @@ consistency-check-report.md
 *.backup
 *.bak
 
-# Test result docs (but keep root TESTING.md and clienterror_patterns.md)
+# Test result docs
 *INTEGRATION_TEST_RESULTS*.md
 lambda/**/TESTING.md
 
