chore: cleanup and consolidate documentation (#148)
* chore: add docs/test-results/ to .gitignore

Playwright test results generated outside docs/tests/ were not ignored.

* docs: consolidate and trim root documentation files

Delete TESTING.md, CONCEPTS.md, ERROR_PATTERNS.md. Merge
LOCAL_DEVELOPMENT.md into DEVELOPMENT.md. Make README and
CONTRIBUTING concise. Fix broken references in test files
and PR template.

---------

Co-authored-by: Etienne Chabert <Etienne.Chabert@solarisbank.de>

--- a/.gitignore
+++ b/.gitignore
@@ -239,7 +239,7 @@ consistency-check-report.md
 *.backup
 *.bak
 
-# Test result docs (but keep root TESTING.md and clienterror_patterns.md)
+# Test result docs
 *INTEGRATION_TEST_RESULTS*.md
 lambda/**/TESTING.md
 
@@ -265,5 +265,6 @@ local_data/
 docs/tests/node_modules/
 docs/tests/playwright-report/
 docs/tests/test-results/
+docs/test-results/
 docs/tests/.playwright/
 docs/tests/playwright/.cache/
