--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Scheduler - Fixed Strategy",
+            "name": "Scheduler - Fixed + Linear",
             "type": "debugpy",
             "request": "launch",
             "module": "lambda.scheduler.handler",
@@ -23,14 +23,51 @@
                 "DRY_RUN": "true",
                 "ENABLE_COMPUTE_SP": "true",
                 "ENABLE_SAGEMAKER_SP": "true",
-                "COVERAGE_TARGET_PERCENT": "90",
-                // Fixed Strategy
-                "PURCHASE_STRATEGY_TYPE": "fixed",
-                "MAX_PURCHASE_PERCENT": "10",
+                "COVERAGE_TARGET_PERCENT": "100",
+                // Fixed target + Linear split (matches single-account-compute example)
+                "TARGET_STRATEGY_TYPE": "fixed",
+                "SPLIT_STRATEGY_TYPE": "linear",
+                "LINEAR_STEP_PERCENT": "10",
+                "COMPUTE_SP_TERM": "THREE_YEAR",
+                "RENEWAL_WINDOW_DAYS": "7",
+                "LOOKBACK_DAYS": "13",
+                "MIN_COMMITMENT_PER_PLAN": "0",
+                "COMPUTE_SP_PAYMENT_OPTION": "NO_UPFRONT"
+            },
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/lambda/scheduler"
+        },
+        {
+            "name": "Scheduler - Dynamic + Dichotomy",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "lambda.scheduler.handler",
+            "envFile": "${workspaceFolder}/.env.local",
+            "justMyCode": false,
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/lambda:${workspaceFolder}",
+                "AWS_REGION": "us-east-1",
+                "AWS_DEFAULT_REGION": "us-east-1",
+                // Local mode
+                "LOCAL_MODE": "true",
+                // Logging
+                "LOG_LEVEL": "INFO",
+                "BOTO_DEBUG": "false",
+                // Required environment variables
+                "QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/123456789012/test-queue",
+                "SNS_TOPIC_ARN": "arn:aws:sns:us-east-1:123456789012:test-topic",
+                "DRY_RUN": "true",
+                "ENABLE_COMPUTE_SP": "true",
+                "ENABLE_SAGEMAKER_SP": "true",
+                // Dynamic target + Dichotomy split (matches dynamic-strategy example)
+                "TARGET_STRATEGY_TYPE": "dynamic",
+                "SPLIT_STRATEGY_TYPE": "dichotomy",
+                "DYNAMIC_RISK_LEVEL": "balanced",
+                "MAX_PURCHASE_PERCENT": "50",
                 "MIN_PURCHASE_PERCENT": "1",
                 "COMPUTE_SP_TERM": "THREE_YEAR",
                 "RENEWAL_WINDOW_DAYS": "7",
-                "LOOKBACK_DAYS": "14",
+                "LOOKBACK_DAYS": "13",
                 "MIN_COMMITMENT_PER_PLAN": "0",
                 "COMPUTE_SP_PAYMENT_OPTION": "NO_UPFRONT"
             },
@@ -38,7 +75,7 @@
             "cwd": "${workspaceFolder}/lambda/scheduler"
         },
         {
-            "name": "Scheduler - Dichotomy Strategy",
+            "name": "Scheduler - AWS + One Shot",
             "type": "debugpy",
             "request": "launch",
             "module": "lambda.scheduler.handler",
@@ -59,47 +96,12 @@
                 "DRY_RUN": "true",
                 "ENABLE_COMPUTE_SP": "true",
                 "ENABLE_SAGEMAKER_SP": "true",
-                "COVERAGE_TARGET_PERCENT": "90",
-                // Dichotomy Strategy
-                "PURCHASE_STRATEGY_TYPE": "dichotomy",
-                "DICHOTOMY_INITIAL_PERCENT": "50",
+                // AWS target + One Shot split (matches organizations example)
+                "TARGET_STRATEGY_TYPE": "aws",
+                "SPLIT_STRATEGY_TYPE": "one_shot",
                 "COMPUTE_SP_TERM": "THREE_YEAR",
                 "RENEWAL_WINDOW_DAYS": "7",
-                "LOOKBACK_DAYS": "14",
-                "MIN_COMMITMENT_PER_PLAN": "0",
-                "COMPUTE_SP_PAYMENT_OPTION": "NO_UPFRONT"
-            },
-            "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}/lambda/scheduler"
-        },
-        {
-            "name": "Scheduler - Follow AWS Strategy",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "lambda.scheduler.handler",
-            "envFile": "${workspaceFolder}/.env.local",
-            "justMyCode": false,
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}/lambda:${workspaceFolder}",
-                "AWS_REGION": "us-east-1",
-                "AWS_DEFAULT_REGION": "us-east-1",
-                // Local mode
-                "LOCAL_MODE": "true",
-                // Logging
-                "LOG_LEVEL": "INFO",
-                "BOTO_DEBUG": "false",
-                // Required environment variables
-                "QUEUE_URL": "https://sqs.us-east-1.amazonaws.com/123456789012/test-queue",
-                "SNS_TOPIC_ARN": "arn:aws:sns:us-east-1:123456789012:test-topic",
-                "DRY_RUN": "true",
-                "ENABLE_COMPUTE_SP": "true",
-                "ENABLE_SAGEMAKER_SP": "true",
-                "COVERAGE_TARGET_PERCENT": "90",
-                // Follow AWS Strategy
-                "PURCHASE_STRATEGY_TYPE": "follow_aws",
-                "COMPUTE_SP_TERM": "THREE_YEAR",
-                "RENEWAL_WINDOW_DAYS": "7",
-                "LOOKBACK_DAYS": "14",
+                "LOOKBACK_DAYS": "13",
                 "MIN_COMMITMENT_PER_PLAN": "0",
                 "COMPUTE_SP_PAYMENT_OPTION": "NO_UPFRONT"
             },
@@ -165,9 +167,10 @@
                 // Debug data
                 "INCLUDE_DEBUG_DATA": "true",
                 // Scheduler strategy (for preview simulation)
-                "PURCHASE_STRATEGY_TYPE": "fixed",
-                "MAX_PURCHASE_PERCENT": "10",
-                "MIN_PURCHASE_PERCENT": "1",
+                "TARGET_STRATEGY_TYPE": "fixed",
+                "SPLIT_STRATEGY_TYPE": "linear",
+                "LINEAR_STEP_PERCENT": "10",
+                "COVERAGE_TARGET_PERCENT": "90",
                 "COMPUTE_SP_TERM": "THREE_YEAR",
                 "COMPUTE_SP_PAYMENT_OPTION": "ALL_UPFRONT",
                 "DATABASE_SP_PAYMENT_OPTION": "NO_UPFRONT",
