chore(deps): add Renovate for Python deps and pin versions with ~=
Move Python dependency management from Dependabot to Renovate with
compatible-release (~=) pinning. This ensures we get patch updates
automatically while Renovate only opens PRs for new major versions.

--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -37,8 +37,8 @@ jobs:
               console.log('Skipping reviewer assignment (PR author is the same as reviewer)');
             }
 
-            // For Dependabot PRs, also assign as assignee
-            if (context.actor === 'dependabot[bot]') {
+            // For bot PRs, also assign as assignee
+            if (context.actor === 'dependabot[bot]' || context.actor === 'renovate[bot]') {
               try {
                 await github.rest.issues.addAssignees({
                   owner: context.repo.owner,
@@ -46,7 +46,7 @@ jobs:
                   issue_number: context.issue.number,
                   assignees: [reviewer]
                 });
-                console.log(`Assigned ${reviewer} as assignee for Dependabot PR`);
+                console.log(`Assigned ${reviewer} as assignee for bot PR`);
               } catch (error) {
                 console.log(`Failed to assign assignee: ${error.message}`);
               }
