--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,20 +1,9 @@
-# Development dependencies for local debugging and testing
-
-# AWS SDK (same version as Lambda runtime)
-boto3>=1.28.0
-
-# Environment variable management
-python-dotenv>=1.0.0
-
-# Testing framework
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.1
-
-# Code quality
-black>=23.7.0
-flake8>=6.1.0
-mypy>=1.5.0
-
-# Type stubs for boto3
-boto3-stubs[ce,savingsplans,s3,sqs,sns,sts]>=1.28.0
+boto3~=1.42
+python-dotenv~=1.2
+pytest~=9.0
+pytest-cov~=7.0
+pytest-mock~=3.15
+black~=26.1
+flake8~=7.3
+mypy~=1.19
+boto3-stubs[ce,savingsplans,s3,sqs,sns,sts]~=1.42
