--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -482,12 +482,19 @@ jobs:
       AWS_DEFAULT_REGION: us-east-1
       GO_VERSION: '1.24'
       TERRAFORM_VERSION: '1.11.0'
+      IS_BOT: ${{ github.actor == 'dependabot[bot]' || github.actor == 'renovate[bot]' }}
 
     steps:
+      - name: Skip for bot PRs
+        if: env.IS_BOT == 'true'
+        run: echo "Skipping integration tests for bot PR (no AWS credentials available)"
+
       - name: Checkout code
+        if: env.IS_BOT != 'true'
         uses: actions/checkout@v6
 
       - name: Set up Go
+        if: env.IS_BOT != 'true'
         uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
@@ -495,12 +502,14 @@ jobs:
           cache-dependency-path: terraform-tests/integration/go.mod
 
       - name: Set up Terraform
+        if: env.IS_BOT != 'true'
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false
 
       - name: Configure AWS Credentials
+        if: env.IS_BOT != 'true'
         uses: aws-actions/configure-aws-credentials@v6
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -508,6 +517,7 @@ jobs:
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
 
       - name: Pre-Test Cleanup
+        if: env.IS_BOT != 'true'
         working-directory: terraform-tests/integration
         run: |
           echo "Cleaning up any orphaned resources before tests..."
@@ -515,6 +525,7 @@ jobs:
           go test -v -timeout 10m -run TestCleanupAllOrphanedResources || true
 
       - name: Install Terratest Dependencies
+        if: env.IS_BOT != 'true'
         working-directory: terraform-tests/integration
         run: |
           go mod tidy
@@ -522,6 +533,7 @@ jobs:
           go mod verify
 
       - name: Run Terratest Integration Tests
+        if: env.IS_BOT != 'true'
         working-directory: terraform-tests/integration
         run: |
           go test -v -timeout 30m -parallel 1 -failfast -skip TestCleanupAllOrphanedResources
@@ -530,32 +542,11 @@ jobs:
           TF_VAR_project_name: sp-autopilot-ci
 
       - name: Cleanup Resources on Failure
-        if: failure()
+        if: failure() && env.IS_BOT != 'true'
         working-directory: terraform-tests/integration
         run: |
           echo "Cleaning up any remaining test resources after failure..."
           go test -v -timeout 10m -run TestCleanupAllOrphanedResources || true
-
-      - name: Comment PR with Test Results
-        if: false # Disabled: github.event_name == 'pull_request' && failure()
-        uses: actions/github-script@v8
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `#### Terraform Integration Tests Failed ❌
-
-            **Terratest integration tests failed.**
-
-            Please review the test results above and fix any failing tests.
-
-            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            });
 
   # Cleanup job that ALWAYS runs after integration tests
   cleanup-aws-resources:
@@ -573,12 +564,19 @@ jobs:
     env:
       AWS_DEFAULT_REGION: us-east-1
       GO_VERSION: '1.24'
+      IS_BOT: ${{ github.actor == 'dependabot[bot]' || github.actor == 'renovate[bot]' }}
 
     steps:
+      - name: Skip for bot PRs
+        if: env.IS_BOT == 'true'
+        run: echo "Skipping cleanup for bot PR (no AWS credentials available)"
+
       - name: Checkout code
+        if: env.IS_BOT != 'true'
         uses: actions/checkout@v6
 
       - name: Set up Go
+        if: env.IS_BOT != 'true'
         uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
@@ -586,6 +584,7 @@ jobs:
           cache-dependency-path: terraform-tests/integration/go.mod
 
       - name: Configure AWS Credentials
+        if: env.IS_BOT != 'true'
         uses: aws-actions/configure-aws-credentials@v6
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -593,6 +592,7 @@ jobs:
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
 
       - name: Install Dependencies
+        if: env.IS_BOT != 'true'
         working-directory: terraform-tests/integration
         run: |
           go mod tidy
@@ -600,6 +600,7 @@ jobs:
           go mod verify
 
       - name: Run Cleanup
+        if: env.IS_BOT != 'true'
         working-directory: terraform-tests/integration
         run: |
           echo "Running cleanup of all orphaned test resources..."
@@ -607,7 +608,7 @@ jobs:
         continue-on-error: true
 
       - name: Cleanup Summary
-        if: always()
+        if: always() && env.IS_BOT != 'true'
         run: |
           echo "========================================="
           echo "AWS Resource Cleanup Complete"
