--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -471,6 +471,7 @@ jobs:
     name: Terraform Integration Tests
     runs-on: ubuntu-latest
     needs: [terraform-validation, tfsec-scan, lint, terraform-unit-tests]
+    if: github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
     concurrency:
       group: aws-integration-tests
       cancel-in-progress: false
@@ -565,7 +566,7 @@ jobs:
     concurrency:
       group: aws-integration-tests
       cancel-in-progress: false
-    if: always()
+    if: always() && github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
     timeout-minutes: 15
     permissions:
       contents: read
