fix: use GitHub Environment for integration tests requiring AWS credentials
Replace bot-actor skip logic with an `aws-integration` environment that
requires reviewer approval before secrets are exposed. This properly
gates credential access for all PR authors (bots and external
contributors alike) while still running the actual tests.

Post-merge setup:
1. Create environment "aws-integration" in Settings > Environments
2. Add required reviewer: etiennechabert
3. Move AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY to environment secrets

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -471,7 +471,7 @@ jobs:
     name: Terraform Integration Tests
     runs-on: ubuntu-latest
     needs: [terraform-validation, tfsec-scan, lint, terraform-unit-tests]
-    if: github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
+    environment: aws-integration
     concurrency:
       group: aws-integration-tests
       cancel-in-progress: false
@@ -563,10 +563,11 @@ jobs:
     name: Cleanup AWS Resources
     runs-on: ubuntu-latest
     needs: terraform-integration-tests
+    environment: aws-integration
     concurrency:
       group: aws-integration-tests
       cancel-in-progress: false
-    if: always() && github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
+    if: always()
     timeout-minutes: 15
     permissions:
       contents: read
