--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -530,11 +530,11 @@ jobs:
           TF_VAR_environment: ci-test
           TF_VAR_project_name: sp-autopilot-ci
 
-      - name: Cleanup Resources on Failure
-        if: failure()
+      - name: Cleanup AWS Resources
+        if: always()
         working-directory: terraform-tests/integration
         run: |
-          echo "Cleaning up any remaining test resources after failure..."
+          echo "Cleaning up any remaining test resources..."
           go test -v -timeout 10m -run TestCleanupAllOrphanedResources || true
 
       - name: Comment PR with Test Results
@@ -558,60 +558,3 @@ jobs:
               body: output
             });
 
-  # Cleanup job that ALWAYS runs after integration tests
-  cleanup-aws-resources:
-    name: Cleanup AWS Resources
-    runs-on: ubuntu-latest
-    needs: terraform-integration-tests
-    environment: aws-integration
-    concurrency:
-      group: aws-integration-tests
-      cancel-in-progress: false
-    if: always()
-    timeout-minutes: 15
-    permissions:
-      contents: read
-
-    env:
-      AWS_DEFAULT_REGION: us-east-1
-      GO_VERSION: '1.24'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Set up Go
-        uses: actions/setup-go@v6
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-          cache-dependency-path: terraform-tests/integration/go.mod
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v6
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_DEFAULT_REGION }}
-
-      - name: Install Dependencies
-        working-directory: terraform-tests/integration
-        run: |
-          go mod tidy
-          go mod download
-          go mod verify
-
-      - name: Run Cleanup
-        working-directory: terraform-tests/integration
-        run: |
-          echo "Running cleanup of all orphaned test resources..."
-          go test -v -timeout 15m -run TestCleanupAllOrphanedResources
-        continue-on-error: true
-
-      - name: Cleanup Summary
-        if: always()
-        run: |
-          echo "========================================="
-          echo "AWS Resource Cleanup Complete"
-          echo "========================================="
-          echo "All orphaned test resources have been cleaned up to prevent AWS charges."
