fix: keep environment on integration test job to retain secret access
Keep environment: aws-integration on both the gate job and the
integration test job. The early approval for the gate job should
carry over to the integration test job in the same workflow run,
so no secret migration is needed.

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -480,6 +480,7 @@ jobs:
     name: Terraform Integration Tests
     runs-on: ubuntu-latest
     needs: [approve-aws-access, terraform-validation, tfsec-scan, lint, terraform-unit-tests]
+    environment: aws-integration
     concurrency:
       group: aws-integration-tests
       cancel-in-progress: false
