fix: prompt integration test approval at workflow start (#168)
* fix: prompt integration test approval at workflow start

Move the environment approval gate to a separate lightweight job that
starts immediately (parallel with Stage 1 checks) instead of waiting
for all prior stages to complete. This prevents having to wait ~7 min
before being prompted for approval.

The integration test job now depends on both the approval gate and the
existing test stages. AWS secrets should be moved from environment
secrets to repository secrets since the environment is now only used
as an approval gate.

* fix: keep environment on integration test job to retain secret access

Keep environment: aws-integration on both the gate job and the
integration test job. The early approval for the gate job should
carry over to the integration test job in the same workflow run,
so no secret migration is needed.

---------

Co-authored-by: Etienne Chabert <Etienne.Chabert@solarisbank.de>

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -183,6 +183,15 @@ jobs:
               body: output
             });
 
+  # Approval gate - runs immediately (parallel with Stage 1) to prompt early
+  approve-aws-access:
+    name: Approve AWS Access
+    if: github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
+    runs-on: ubuntu-latest
+    environment: aws-integration
+    steps:
+      - run: echo "AWS access approved for this workflow run"
+
   # Stage 2: Lambda tests (runs after Stage 1 passes)
   scheduler-tests:
     needs: [terraform-validation, tfsec-scan, lint]
@@ -470,7 +479,7 @@ jobs:
   terraform-integration-tests:
     name: Terraform Integration Tests
     runs-on: ubuntu-latest
-    needs: [terraform-validation, tfsec-scan, lint, terraform-unit-tests]
+    needs: [approve-aws-access, terraform-validation, tfsec-scan, lint, terraform-unit-tests]
     environment: aws-integration
     concurrency:
       group: aws-integration-tests
